--- a/css/login.css
+++ b/css/login.css
@@ -1,210 +1,96 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-  html {
-    padding-bottom: 0px;
-    margin-bottom: 0px;
-  }
-  body {
-    background-color: rgb(230, 230, 230);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(to bottom, #f2f2f2, #f2f2f2, #ffffff, #ffffff, #f2f2f2, #f2f2f2);
-
-  }
-
-  @keyframes customHeartBeat {
-    0% {
-      transform: scale(1);
-    }
-
-    50% {
-      transform: scale(1.1);
-    }
-
-    100% {
-      transform: scale(1);
-    }
-  }
-
-  #openChatbot {
-    animation-name: customHeartBeat;
-    position: fixed;
-    bottom: 20px;
-    /* Ajusta la distancia desde la parte inferior */
-    right: 20px;
-    /* Ajusta la distancia desde la parte derecha */
-    border: none;
-    border-radius: 50px;
-    animation-duration: 2s;
-    /* Duración de la animación */
-    animation-iteration-count: infinite;
-    /* Repetición infinita */
-
-
-  }
-
-
-
-  .container {
-    width: 1280px;
-    margin: 0 auto;
-    max-width: 95%;
     display: flex;
-    align-items: center;
-
-  }
-
-  .Slack_Link {
-    text-decoration: none;
-    color: aliceblue;
-  }
-
-  .left {
-    flex: 1;
-    
-    padding-right: 250px;
-
-  }
-
-  .right {
-    flex: 1;
-    
-
-
-
-  }
-
-  #Alfred {
-    border-radius: 50px;
-  }
-
-  h1 {
-    font-size: 60px;
-    font-family: 'Poppins', sans-serif;
-
-  }
-
-  .btn {
-    background-color: #ff0f4f;
-  }
-
-  .container2 {
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
-    font-family: "Poppins", sans-serif;
-    margin-top: 30px;
-  }
-
-    .card {
-        width: 152px;
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        text-align: center;
-        padding: 20px;
-        margin: 10px;
-        transition: transform 0.3s; /* Transición para el efecto de expansión */
-    }
-    .card:hover {
-      transform: scale(1.1); /* Escala la tarjeta al 110% del tamaño original al pasar el cursor */
-  }
-
-    .card img {
-        display: block;
-        margin: 0 auto;
-        width: 75px;
-        height: 75px;
-        
-    }
-
-    .button {
-        display: inline-block;
-        background-color: #ff0f4f;
-        color: #fff;
-        padding: 10px 20px;
-        border-radius: 5px;
-        margin-top: 10px;
-        text-decoration: none;
-        font-size: 14px;
-    }
-    p {
-        font-size: 15px;
-    }
-    .container2 p{
-        font-size: 10px;
-    }
-    h2 {
-        font-size: 14px;
-    }
-
-
-
-    .popup {
-      display: none;
-      position: fixed;
-      bottom: 100px; /* Ajusta la posición vertical como desees */
-      right: 20px;  /* Ajusta la posición horizontal como desees */
-      background-color: #fff; /* Color de fondo */
-      color: #ff0f4f; /* Color del texto */
-      padding: 10px 20px;
-      border-radius: 5px;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-      z-index: 999; /* Asegura que esté en la parte superior */
-      font-size: 12px;
-      
-    }
+    align-items: center;
+    min-height: 100vh;
+    padding-top: 100px;
+    color: #dedede;
+    width: 400px;
+    height: 600px;
     
     
-   
-    
-    @keyframes fadeIn {
-      0% { opacity: 0; }
-      100% { opacity: 1; }
-    }
-    
-   
-    .close-button {
-      position: absolute;
-      top: 0px;
-      right: 0px;
-      cursor: pointer;
-      font-size: 10px; /* Tamaño de fuente para hacer el botón más pequeño */
-      color: #fff; /* Color del icono (puedes personalizarlo) */
-      background: #ff0f4f; /* Color de fondo del botón (puedes personalizarlo) */
-      border: 1px solid #fff; /* Borde del botón (puedes personalizarlo) */
-       /* Hace que el botón sea redondo */
-      width: 15px; /* Ancho del botón */
-      height: 15px; /* Alto del botón */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    
-    
-    .popup.active {
-      display: block;
-      animation: fadeIn 0.5s;
-    }
-    footer {
-      background-color: #000;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-  }
+}
 
-  .footer-section {
-      display: inline-block;
-      width: 33%;
-  }
-
-  .footer-section img {
-      width: 50px;
-      height: auto;
-      
-  }
-  #futer2 {
-    background-color: #f2f2f2;
-  }
+.wrapper {
+    width: 400px;
+    height: 600px;
     
+    
+}
 
+.box {
+    border: 1px solid #ffffff;
+    padding: 10px 15px;
+    min-height: 400px;
+    max-height: 400px;
+    overflow-y: scroll; /* Agregado para desplazamiento vertical */
+    background-color: #ff0f4f;
+    text-align: center;
+    
+    
+    
+    
+}
+.button {
+    margin-top: 50px;
+line-height: 1;
+text-decoration: none;
+display: inline-flex;
+align-items: center;
+gap: .75rem;
+background-color: var(--clr);
+color: #fff;
+border-radius: 10rem;
+font-weight: 600;
+padding: .75rem 1.5rem;
+padding-left: 20px;
+white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis;
+transition: background-color .3s;
+}
 
+.button__icon-wrapper {
+flex-shrink: 0;
+width: 25px;
+height: 25px;
+position: relative;
+color: var(--clr);
+background-color: #fff;
+border-radius: 50%;
+display: grid;
+place-items: center;
+overflow: hidden;
+}
+
+.button:hover {
+background-color: #000;
+}
+
+.button:hover .button__icon-wrapper {
+color: #000;
+}
+
+.button__icon-svg--copy {
+position: absolute;
+transform: translate(-150%, 150%);
+}
+
+.button:hover .button__icon-svg:first-child {
+transition: transform .3s ease-in-out;
+transform: translate(150%, -150%);
+}
+
+.button:hover .button__icon-svg--copy {
+transition: transform .3s ease-in-out .1s;
+transform: translate(0);
+}
